k8s/saas-web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-web-app
  template:
    metadata:
      labels:
        app: saas-web-app
    spec:
      containers:
        - name: web
          image: seu-dockerhub/saas-web-app:latest
          ports:
            - containerPort: 80
