k8s/saas-web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-web-app
  namespace: saas-web-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app-cloud.dnn.lat
      secretName: wildcard-dnn

  rules:
    - host: app-cloud.dnn.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saas-web-app
                port:
                  number: 80
